docs/api/qiskit/1.0/qiskit.circuit.library.C3XGate.mdx
---
title: C3XGate (v1.0)
description: API reference for qiskit.circuit.library.C3XGate in qiskit v1.0
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.C3XGate
---

# C3XGate

<Class id="qiskit.circuit.library.C3XGate" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/circuit/library/standard_gates/x.py#L671-L828" signature="qiskit.circuit.library.C3XGate(*args, _force_mutable=False, **kwargs)" modifiers="class">
  Bases: [`SingletonControlledGate`](circuit_singleton#qiskit.circuit.singleton.SingletonControlledGate "qiskit.circuit.singleton.SingletonControlledGate")

  The X gate controlled on 3 qubits.

  This implementation uses $\sqrt{T}$ and 14 CNOT gates.

  Create a new 3-qubit controlled X gate.

  ## Attributes

  ### base\_class

  <Attribute id="qiskit.circuit.library.C3XGate.base_class">
    Get the base class of this instruction. This is guaranteed to be in the inheritance tree of `self`.

    The “base class” of an instruction is the lowest class in its inheritance tree that the object should be considered entirely compatible with for \_all\_ circuit applications. This typically means that the subclass is defined purely to offer some sort of programmer convenience over the base class, and the base class is the “true” class for a behavioural perspective. In particular, you should *not* override [`base_class`](#qiskit.circuit.library.C3XGate.base_class "qiskit.circuit.library.C3XGate.base_class") if you are defining a custom version of an instruction that will be implemented differently by hardware, such as an alternative measurement strategy, or a version of a parametrised gate with a particular set of parameters for the purposes of distinguishing it in a [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") from the full parametrised gate.

    This is often exactly equivalent to `type(obj)`, except in the case of singleton instances of standard-library instructions. These singleton instances are special subclasses of their base class, and this property will return that base. For example:

    ```python
    >>> isinstance(XGate(), XGate)
    True
    >>> type(XGate()) is XGate
    False
    >>> XGate().base_class is XGate
    True
    ```

    In general, you should not rely on the precise class of an instruction; within a given circuit, it is expected that `Instruction.name` should be a more suitable discriminator in most situations.
  </Attribute>

  ### condition

  <Attribute id="qiskit.circuit.library.C3XGate.condition">
    The classical condition on the instruction.
  </Attribute>

  ### condition\_bits

  <Attribute id="qiskit.circuit.library.C3XGate.condition_bits">
    Get Clbits in condition.
  </Attribute>

  ### ctrl\_state

  <Attribute id="qiskit.circuit.library.C3XGate.ctrl_state">
    Return the control state of the gate as a decimal integer.
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.library.C3XGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.C3XGate.definition">
    Return definition in terms of other basic gates. If the gate has open controls, as determined from self.ctrl\_state, the returned definition is conjugated with X without changing the internal \_definition.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.C3XGate.duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.C3XGate.label">
    Return instruction label
  </Attribute>

  ### mutable

  <Attribute id="qiskit.circuit.library.C3XGate.mutable">
    Is this instance is a mutable unique instance or not.

    If this attribute is `False` the gate instance is a shared singleton and is not mutable.
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.C3XGate.name">
    Get name of gate. If the gate has open controls the gate name will become:

    > \<original\_name\_o\<ctrl\_state>

    where \<original\_name> is the gate name for the default case of closed control qubits and \<ctrl\_state> is the integer value of the control state for the gate.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.C3XGate.num_clbits">
    Return the number of clbits.
  </Attribute>

  ### num\_ctrl\_qubits

  <Attribute id="qiskit.circuit.library.C3XGate.num_ctrl_qubits">
    Get number of control qubits.

    **Returns**

    The number of control qubits for the gate.

    **Return type**

    [int](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.C3XGate.num_qubits">
    Return the number of qubits.
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.C3XGate.params">
    Get parameters from base\_gate.

    **Returns**

    List of gate parameters.

    **Return type**

    [list](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.12)")

    **Raises**

    [**CircuitError**](circuit#qiskit.circuit.CircuitError "qiskit.circuit.CircuitError") – Controlled gate does not define a base gate
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.C3XGate.unit">
    Get the time unit of duration.
  </Attribute>

  ## Methods

  ### control

  <Function id="qiskit.circuit.library.C3XGate.control" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/circuit/library/standard_gates/x.py#L775-L811" signature="control(num_ctrl_qubits=1, label=None, ctrl_state=None, annotated=False)">
    Controlled version of this gate.

    **Parameters**

    *   **num\_ctrl\_qubits** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")) – number of control qubits.
    *   **label** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)") *| None*) – An optional label for the gate \[Default: `None`]
    *   **ctrl\_state** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")  *|*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)") *| None*) – control state expressed as integer, string (e.g.\`\`’110’`), or ``None`. If `None`, use all 1s.
    *   **annotated** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.12)")) – indicates whether the controlled gate can be implemented as an annotated gate.

    **Returns**

    controlled version of this gate.

    **Return type**

    [ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")
  </Function>

  ### inverse

  <Function id="qiskit.circuit.library.C3XGate.inverse" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/circuit/library/standard_gates/x.py#L813-L825" signature="inverse(annotated=False)">
    Invert this gate. The C3X is its own inverse.

    **Parameters**

    **annotated** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.12)")) – when set to `True`, this is typically used to return an [`AnnotatedOperation`](qiskit.circuit.AnnotatedOperation "qiskit.circuit.AnnotatedOperation") with an inverse modifier set instead of a concrete [`Gate`](qiskit.circuit.Gate "qiskit.circuit.Gate"). However, for this class this argument is ignored as this gate is self-inverse.

    **Returns**

    inverse gate (self-inverse).

    **Return type**

    [C3XGate](#qiskit.circuit.library.C3XGate "qiskit.circuit.library.C3XGate")
  </Function>
</Class>

